--- a/angular-firebase-gallery/src/app/upload/upload.component.html
+++ b/angular-firebase-gallery/src/app/upload/upload.component.html
@@ -1,3 +1,17 @@
-<p>
-  upload works!
-</p>
+
+
+<div class="container">
+  <h2 class="heading">Upload New Images</h2>
+  <!-- Progress Bar -->
+  <div *ngIf="upload">
+    <div class="progress">
+      <div class="progress-bar progress-bar-animated"
+        [ngStyle]="{ 'width': upload?.progress + '%' }">
+      </div>
+    </div>
+    Progress: {{upload?.progress}}% Complete
+  </div><hr>
+  <!-- Input and Upload Button -->
+  <input type="file" (change)="handleFiles($event)" multiple>
+  <button class="btn btn-primary" (click)="uploadFiles()">Upload Images</button>
+</div>
