--- a/angular-firebase-gallery/src/app/gallery/gallery.component.html
+++ b/angular-firebase-gallery/src/app/gallery/gallery.component.html
@@ -15,8 +15,8 @@
             <a [routerLink]="['/image', image.$key]">
             <img src="{{image.url}}" class="tn">
             </a>
-            <p>URL: {{image.url}}</p>
-            <p>KeyID: {{image.$key}}</p>
+            <!-- <p>URL: {{image.url}}</p> -->
+            <!-- <p>KeyID: {{image.$key}}</p> -->
         </li>
     </ul>
 </div>
